fix out of place text

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,8 @@ main {
 
 .meme {
     position: relative;
+    display: block;
+    margin: 0 auto;
 }
 
 .meme--image {
@@ -101,6 +103,10 @@ main {
     top: 0;
 }
 
-div label {
+div label, div input {
     display: block;
+    text-align: start;
+}
+main {
+    max-width: fit-content;
 }
